# RanJamp

./: Autoevalucion.txt  CMakeLists.txt  Indifferent_entertaiment.txt  MapaFinal.tmx  Mundo1-1.tmx  Mundo1-2.tmx  Mundo1-3.tmx  Mundo1-4.tmx  Mundo2-1.tmx  Mundo2-2.tmx  Mundo2-3.tmx  Mundo2-4.tmx  Mundo3-1.tmx  Mundo3-2.tmx  Mundo3-3.tmx  Mundo3-4.tmx  Mundo3-5.tmx  Mundo4-1.tmx  Mundo4-2.tmx  Mundo4-3.tmx  Mundo4-4.tmx  Mundo5.tmx  Mundovacio.tmx  Nivel1.tmx  Nivel2.tmx  Nivel3.tmx  Nivel4.tmx  NivelHielo.tmx  README.md  enemNube.cpp  main.cpp  main2.cpp  pajarraco.cpp  tutorial.tmx  tutorial1.tmx
Animacion/: Animacion.cpp  Animacion.h  CMakeLists.txt
Bloque/: Bloque.cpp  Bloque.h  CMakeLists.txt
Bullet/: CMakeLists.txt  bullet.cpp  bullet.h
Cuerpo/: CMakeLists.txt  Cuerpo.cpp  Cuerpo.h
Enemigos/: Boss.cpp  Boss.h  CMakeLists.txt  centinela.cpp  centinela.h  enemigo.cpp  enemigo.h  murcielago.cpp  murcielago.h  nube.cpp  nube.h  pajaro.cpp  pajaro.h  reptante.cpp  reptante.h
Enumerador/: typeBody.h  typeBullet.h
Hud/: CMakeLists.txt  hud.cpp  hud.h
Juego/: CMakeLists.txt  Estado.cpp  Estado.h  Final.cpp  Final.h  Juego.cpp  Juego.h  Manejador.cpp  Manejador.h  Menu.cpp  Menu.h  Transicion.cpp  Transicion.h  menu_vol.cpp  menu_vol.h
Mapa/: CMakeLists.txt  mapa.cpp  mapa.h
Menu/: CMakeLists.txt  Tutorial.cpp  Tutorial.h  menu.cpp  menu.h  menu_controles.cpp  menu_controles.h  menu_inicial.cpp  menu_inicial.h  menu_mundos.cpp  menu_mundos.h  menu_nivel.cpp  menu_nivel.h  menu_pausa.cpp  menu_pausa.h  menu_vol.cpp  menu_vol.h
Motor/: CMakeLists.txt  (+4 more)
(+26 files in other folders)
